# takkerus

./: .gitignore  Cargo.toml  README.md
analysis/: Cargo.toml
analysis/benches/: evaluation.rs
analysis/examples/analysis/: evaluate_tps.rs  explain_model_6s.rs  lib.rs
analysis/src/: analysis.rs  evaluation.rs  lib.rs  move_order.rs  ply_generator.rs  rng.rs  search.rs  statistics.rs  time.rs  transposition_table.rs  util.rs
analysis/src/evaluation/: explanation.rs  features.rs  mod.rs  scoring.rs  types.rs  util.rs
analysis/src/evaluation/explanation/model/: features_3s.rs  features_4s.rs  features_5s.rs  features_6s.rs  features_7s.rs  features_8s.rs  mod.rs
analysis/src/evaluation/features/: large.rs  mod.rs  small.rs
analysis/src/evaluation/model/: mod.rs  model_3s.json  model_4s.json  model_5s.json  model_6s.json  model_7s.json  model_8s.json
analysis/src/move_order/: all_plies.rs  killer_moves.rs  mod.rs  placement_wins.rs  transposition_table.rs
analysis/src/plies/: generation.rs  mod.rs  order.rs
analysis/src/search/: mod.rs  pvs.rs  work.rs
analysis/src/util/: bag.rs  mod.rs
ann/: Cargo.toml
ann/src/: activation.rs  gradient_descent.rs  layer.rs  lib.rs  loss.rs
ann/src/linear_algebra/: matrix.rs  mod.rs  vector.rs
ann/src/shallow/: ann.rs  gradient_descent.rs  mod.rs
client/: Cargo.toml
client/src/: analyze.rs  args.rs  game.rs  main.rs  message.rs  play.rs  tei.rs
client/src/player/: ai.rs  human.rs  mod.rs
data/: comparison_set.json  takkerus_evaluations.json  takkerus_static_evaluations.json  taktician_evaluations.json  topaz_evaluations.json
data/analysis/: analysis.ipynb  analysis_5s.ipynb  analysis_6s.ipynb  matches.json  model.ipynb  readme  requirements.txt  taktician_matches.json  topaz_matches.json
lime/: Cargo.toml
lime/src/: array.rs  lasso.rs  lib.rs
src/: arguments.rs  logger.rs  main.rs  timer.rs
src/ai/: minimax.rs  mod.rs
src/game/: header.rs  logger.rs  message.rs  mod.rs
src/player/: cli_player.rs  mod.rs  pvsearch_player.rs
src/player/playtak_player/: comm.rs  game_type.rs  message_queue.rs  mod.rs  parse.rs
src/render/: mod.rs  sdl.rs
src/tak/: board.rs  mod.rs  move_.rs  player.rs  ply.rs  state.rs  state_analysis.rs
src/tak/player/: cli_player.rs  mod.rs  playtak_player.rs
tak/: Cargo.toml
tak/src/: bitmap.rs  lib.rs  metadata.rs  piece.rs  ply.rs  ptn.rs  stack.rs  state.rs  tps.rs  zobrist.rs
training/config/: config_5s.json  config_6s.json
