[package]
name = "analysis"
version = "0.1.0"
license = "GPL-3.0-or-later"
edition = "2021"

[features]
deep-stacks = ["tak/deep-stacks"]
tools = ["rand"]

[dependencies]
ann = { path = "../ann" }
once_cell = "1.16"
rand = { version = "0.8", optional = true }
serde = "1.0"
serde_json = "1.0"
tak = { path = "../tak" }
tracing = "0.1"

[dev-dependencies]
criterion = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
bench = false

[[bench]]
name = "evaluation"
harness = false

[[bin]]
name = "extract_states"
required-features = ["tools"]

[[bin]]
name = "evaluate_positions"
required-features = ["tools"]