[package]
name = "analysis"
version = "0.1.0"
license = "GPL-3.0-or-later"
edition = "2021"
autobins = false
autoexamples = false

[features]
deep-stacks = ["tak/deep-stacks"]
tools = ["rand", "lime", "pyo3/extension-module"]

[dependencies]
ann = { path = "../ann" }
lime = { path = "../lime", optional = true }
once_cell = "1.16"
pyo3 = { version = "0.18", optional = true }
rand = { version = "0.8", optional = true }
serde = "1.0"
serde_json = "1.0"
tak = { path = "../tak" }
tracing = "0.1"

[dev-dependencies]
criterion = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
bench = false

[[bench]]
name = "evaluation"
harness = false

[[bin]]
name = "train"
required-features = ["tools"]

[[bin]]
name = "extract_states"
required-features = ["tools"]

[[bin]]
name = "evaluate_positions"
required-features = ["tools"]

# A Python module that contains various analysis functionality.
[[example]]
name = "analysis"
path = "examples/analysis/lib.rs"
crate-type = ["cdylib"]
required-features = ["tools"]