[package]
name = "analysis"
version = "0.1.0"
license = "GPL-3.0-or-later"
edition = "2021"
autobins = false
autoexamples = false

[features]
deep-stacks = ["tak/deep-stacks"]
tools = ["rand", "lime", "pyo3/extension-module"]

[dependencies]
ann = { path = "../ann" }
fnv = "1.0"
lime = { path = "../lime", optional = true }
once_cell = "1.16"
pyo3 = { version = "0.18", optional = true }
rand = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tak = { path = "../tak" }
tracing = "0.1"

[[bin]]
name = "train"
required-features = ["tools"]

# A Python module that contains various analysis functionality.
[[example]]
name = "analysis"
path = "examples/analysis/lib.rs"
crate-type = ["cdylib"]
required-features = ["tools"]