[package]
name = "client"
version = "0.1.0"
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
analysis = { path = "../analysis"}
tak = { path = "../tak" }
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "takkerus"
path = "src/main.rs"