[package]
name = "client"
version = "0.1.0"
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12"
analysis = { path = "../analysis"}
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
once_cell = "1.16"
tak = { path = "../tak" }
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "takkerus"
path = "src/main.rs"