[package]
name = "client"
version = "0.1.0"
license = "GPL-3.0-or-later"
edition = "2021"
default-run = "takkerus"

[features]
deep-stacks = ["analysis/deep-stacks", "tak/deep-stacks"]

[dependencies]
async-std = "1.12"
analysis = { path = "../analysis"}
clap = { version = "4", features = ["derive"] }
futures = "0.3"
once_cell = "1.16"
tak = { path = "../tak" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "takkerus"
path = "src/main.rs"